--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body, html {
 }
 
 .bgimg-1 {
-    background-image: url('/WhatsApp Image 2024-06-28 at 7.41.12 PM.jpeg');
+    background-image: url('./WhatsApp Image 2024-06-28 at 7.41.12 PM.jpeg');
 }
 
 
